--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "svelte-spa-chunk": "^2.0.0",
-    "svelte-spa-router": "^3.3.0"
+    "svelte-spa-router": "^3.3.0",
+    "svelte-use-click-outside": "^1.0.0"
   }
 }
