--- a/vite-project/jsconfig.json
+++ b/vite-project/jsconfig.json
@@ -31,7 +31,7 @@
        "$stores/*": ["src/stores/*"],
        "$assets/*": ["src/assets/*"],
        "$icons/*": ["public/icons/*"],
-       "$components/*":["src/components/*"]
+       "$components/*":["src/components/*"],
      },
   },
   /**
