--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -17,6 +17,7 @@
     "vite": "^4.1.0"
   },
   "dependencies": {
+    "svelte-french-toast": "^1.2.0",
     "svelte-spa-chunk": "^2.0.0",
     "svelte-spa-router": "^3.3.0",
     "svelte-use-click-outside": "^1.0.0"
